--- a/search_doctor.html
+++ b/search_doctor.html
@@ -54,12 +54,12 @@
   <section id="float2" class="">
     <div class="container p-0">
       <div class="row d-flex align-items-stretch">
-        <a href="#" class="col-sm-12 col-md-4 col-xl-4 float-ch2 floatItem-row floatItem--doctor">
+        <a href="search_doctor.html" class="col-sm-12 col-md-4 col-xl-4 float-ch2 floatItem-row floatItem--doctor">
           <i class="floatItem-icon fas fa-user-md"></i>
           <h4 class="floatItem-tagline">Find a doctor</h4>
           <p class="floatItem-subTagline">Chose by name, specialty and more.</p>
         </a>
-        <a href="#" class="col-sm-12 col-md-4 col-xl-4 float-ch2 floatItem-row floatItem--conditions">
+        <a href="childhospital-anywhere.html" class="col-sm-12 col-md-4 col-xl-4 float-ch2 floatItem-row floatItem--conditions">
           <i class="floatItem-icon fas fa-plus"></i>
           <h4 class="floatItem-tagline">Consult a Doctor Now</h4>
           <p class="floatItem-subTagline">Talk to our doctors on telemedicine.</p>
