--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
   <!-- navbar -->
-  <nav class="navbar py-4 navbar-expand-lg ftco_navbar navbar-light bg-light flex-row">
+  <!-- <nav class="navbar py-4 navbar-expand-lg ftco_navbar navbar-dark bg-dark flex-row">
     <div class="container">
       <div class="row no-gutters d-flex align-items-start align-items-center px-3 px-md-0">
         <div class="col-lg-2 pr-4 align-items-center">
@@ -46,8 +46,52 @@
         </div>
       </div>
     </div>
-  </nav>
+  </nav> -->
   <!-- endOfNavbar -->
+
+  <nav class="navbar fixed-top py-4 navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+      <a class="navbar-brand tx-home" href="index.html">Child<span>Hospital</span></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <!-- <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="#test">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#stores">Deparments</a>
+          </li>
+          <!-- <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li> -->
+          <!-- <li class="nav-item">
+            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          </li> -->
+          <li class="nav-item">
+            <a class="nav-link" href="About.html">About</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
   <!-- Slider -->
   <section id="home-slider">
@@ -119,7 +163,7 @@
 
   
 
-  <section id="test" class="rm-pt-1-added pt-1-added">
+  <section id="test" class="">
     <div class="container">
       <div class="row">
         <div class="img clo-sm-12 col-md-12 col-xl-6">
@@ -136,7 +180,24 @@
     </div>
   </section>
 
-  <section class="stores">
+  <section id="stores" class="stores">
+
+    <div class="bg-video">
+      <video class="bg-video-content" autoplay muted loop>
+        <source src="img/video.mp4" type="video/mp4">
+        <source src="img/video.webm" type="video/webm">
+        Your browser is not supported!
+      </video>
+    </div>
+    <div class="bg-video2">
+      
+    </div>
+    <div class="u-center-text u-margin-bottom-big">
+      <!-- <h2 class="heading-secondary">
+        we make people genuinely happy
+      </h2> -->
+    </div>
+
     <div class="row mb-5">
       <div class="story">
         <figure class="story-shape">
