--- a/About.html
+++ b/About.html
@@ -103,10 +103,12 @@
     <div class="container">
       <div class="about-card">
         <div class="about-text">
-          <h3>ما هي CodeForIraq ؟</h3>
-          <p>
-            وهي مبادرة إنسانية غير ربحية تهدف الى خدمة المجتمع عن طريق البرمجة Programming. تعتبر “Code For IRAQ” مبادرة تعليمية حقيقية ترعى المهتمين بتعلم تصميم وبرمجة تطبيقات الهاتف الجوال ومواقع الانترنت وبرامج الحاسوب والشبكات والاتصالات ونظم تشغيل الحاسوب باستخدام التقنيات مفتوحة المصدر Open Source ، كما توفر لهم جميع الدروس التعليمية اللازمة وبشكل مجاني تماماً
-          </p>
+          <div>
+            <h3>ما هي CodeForIraq ؟</h3>
+            <p>
+              وهي مبادرة إنسانية غير ربحية تهدف الى خدمة المجتمع عن طريق البرمجة Programming. تعتبر “Code For IRAQ” مبادرة تعليمية حقيقية ترعى المهتمين بتعلم تصميم وبرمجة تطبيقات الهاتف الجوال ومواقع الانترنت وبرامج الحاسوب والشبكات والاتصالات ونظم تشغيل الحاسوب باستخدام التقنيات مفتوحة المصدر Open Source ، كما توفر لهم جميع الدروس التعليمية اللازمة وبشكل مجاني تماماً
+            </p>
+          </div>
         </div>
       </div>
     </div>
@@ -207,6 +209,13 @@
                 <input type="submit" value="Subscribe" class="form-control submit px-3">
               </div>
             </form>
+          </div>
+          <div class="ftco-footer-widget mb-5">
+            <h2 class="ftco-heading-2">Download App</h2>
+            <div class="img-midia pl-4">
+              <img src="images/google-play-store.png" alt="">
+              <img src="images/apple-app-store.png" alt="">
+            </div>
           </div>
         </div>
       </div>
