--- a/childhospital-anywhere.html
+++ b/childhospital-anywhere.html
@@ -103,10 +103,10 @@
       <h3 class="mb-2">Accessing ChildHospital Anywhere.</h3>
       <p class="pl-3 mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quibusdam repellat suscipit nisi praesentium vero distinctio odio sed ex obcaecati.</p>   
 
-      <div class="img-store mb-5">
+      <!-- <div class="img-store mb-5">
         <img src="images/google-play-store.png" alt="">
         <img src="images/apple-app-store.png" alt="">
-      </div>
+      </div> -->
       
       <h3 class="mb-2">What is the fee for using this?</h3>
       <p class="pl-3 mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic ipsam consequuntur animi optio, exercitationem corporis sapiente laborum quam cupiditate quaerat?</p>
@@ -225,6 +225,13 @@
                 <input type="submit" value="Subscribe" class="form-control submit px-3">
               </div>
             </form>
+          </div>
+          <div class="ftco-footer-widget mb-5">
+            <h2 class="ftco-heading-2">Download App</h2>
+            <div class="img-midia pl-4">
+              <img src="images/google-play-store.png" alt="">
+              <img src="images/apple-app-store.png" alt="">
+            </div>
           </div>
         </div>
       </div>
