--- a/index.html
+++ b/index.html
@@ -333,6 +333,13 @@
               </div>
             </form>
           </div>
+          <div class="ftco-footer-widget mb-5">
+            <h2 class="ftco-heading-2">Download App</h2>
+            <div class="img-midia pl-4">
+              <img src="images/google-play-store.png" alt="">
+              <img src="images/apple-app-store.png" alt="">
+            </div>
+          </div>
         </div>
       </div>
       <div class="row">
