--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </ol> -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/bg_1.jpg" class="d-block w-100 h-100" alt="...">
+                <img src="img/bg_1.jpg" class="d-block w-100 h-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h1 class="mb-4 display-4">Helping Your <span>Stay Happy One</span></h1>
                   <h5 class="subheading text-uppercase mb-4">Everyday We Bring Hope and Smile to the Patient We Serve.</h5>    
@@ -111,7 +111,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/bg_2.jpg" class="d-block w-100 h-100" alt="...">
+                <img src="img/bg_2.jpg" class="d-block w-100 h-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h1 class="mb-4 display-4">We Care<span>About Your Health</span></h1>
                   <h5 class="subheading text-uppercase mb-4">Your Health is Our Top Priority with Comprehensive, Affordable medical.</h5>    
@@ -167,7 +167,7 @@
     <div class="container">
       <div class="row">
         <div class="img clo-sm-12 col-md-12 col-xl-6">
-          <img class="img2" src="images/doc-1.jpg" alt="">    
+          <img class="img2" src="img/doc-1.jpg" alt="">    
         </div>
         <div class="ms clo-sm-12 col-md-12 col-xl-6">
           <h3 class="mb-3 text-uppercase mt-4">OPD Instant Clinic - The doctor will see you now.</h3>
@@ -201,7 +201,7 @@
     <div class="row mb-5">
       <div class="story">
         <figure class="story-shape">
-          <img src="images/doc-2.jpg" alt="" class="story-image">
+          <img src="img/doc-6.jpg" alt="" class="story-image">
           <figcaption class="story-caption">Ali Haider</figcaption>
         </figure>
         <div class="story-text">
@@ -213,7 +213,7 @@
     <div class="row mb-5">
       <div class="story">
         <figure class="story-shape">
-          <img src="images/doc-2.jpg" alt="" class="story-image">
+          <img src="img/doc-7.jpg" alt="" class="story-image">
           <figcaption class="story-caption">Ali Haider</figcaption>
         </figure>
         <div class="story-text">
@@ -225,7 +225,7 @@
     <div class="row">
       <div class="story">
         <figure class="story-shape">
-          <img src="images/doc-2.jpg" alt="" class="story-image">
+          <img src="img/doc-8.jpg" alt="" class="story-image">
           <figcaption class="story-caption">Ali Haider</figcaption>
         </figure>
         <div class="story-text">
@@ -248,14 +248,14 @@
         <div class="col-xl-3 col-md-6 col-sm-12">
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2 logo">Dr.<span>care</span></h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam illum omnis explicabo modi consequatur tempora.</p>
           </div>
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon"><i class="fas fa-map-marker-alt"></i></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon"><i class="fas fa-phone-alt"></i></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><span class="icon"><i class="fas fa-map-marker-alt"></i></span><span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span></li>
+                <li><a href="#"><span class="icon"><i class="fas fa-phone-alt"></i></span><span class="text">+1 111 1111 111</span></a></li>
                 <li><a href="#"><span class="icon"><i class="fas fa-envelope"></i></span><span class="text">info@yourdomain.com</span></a></li>
               </ul>
             </div>
@@ -295,7 +295,7 @@
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Recent Blog</h2>
             <div class="block-21 mb-4 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(img/image_1.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -306,7 +306,7 @@
               </div>
             </div>
             <div class="block-21 mb-5 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(img/image_2.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -336,8 +336,8 @@
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Download App</h2>
             <div class="img-midia pl-4">
-              <img src="images/google-play-store.png" alt="">
-              <img src="images/apple-app-store.png" alt="">
+              <img src="img/google-play-store.png" alt="">
+              <img src="img/apple-app-store.png" alt="">
             </div>
           </div>
         </div>
