--- a/search_doctor.html
+++ b/search_doctor.html
@@ -35,13 +35,13 @@
           <!-- <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#test">Services</a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#stores">Deparments</a>
+            <a class="nav-link" href="index.html">Deparments</a>
           </li>
-          <li class="nav-item dropdown">
+          <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
             </a>
@@ -51,7 +51,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          </li> -->
+          </li>  -->
           <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
           </li> -->
@@ -99,7 +99,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -142,7 +142,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -185,7 +185,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -228,7 +228,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -271,7 +271,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -314,7 +314,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -357,7 +357,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -400,7 +400,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -444,7 +444,7 @@
         <div class="col-sm-12 col-md-6 col-xl-4">
           <div class="card">
             <div class="card-img">
-              <img src="images/doc-4.jpg" alt="">
+              <img src="img/doc-6.jpg" alt="">
             </div>
             <div class="card-title">
               <h3>Ali Hider</h3>
@@ -499,14 +499,14 @@
         <div class="col-xl-3 col-md-6 col-sm-12">
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2 logo">Dr.<span>care</span></h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam illum omnis explicabo modi consequatur tempora.</p>
           </div>
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon"><i class="fas fa-map-marker-alt"></i></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon"><i class="fas fa-phone-alt"></i></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><span class="icon"><i class="fas fa-map-marker-alt"></i></span><span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span></li>
+                <li><a href="#"><span class="icon"><i class="fas fa-phone-alt"></i></span><span class="text">+1 111 1111 111</span></a></li>
                 <li><a href="#"><span class="icon"><i class="fas fa-envelope"></i></span><span class="text">info@yourdomain.com</span></a></li>
               </ul>
             </div>
@@ -546,7 +546,7 @@
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Recent Blog</h2>
             <div class="block-21 mb-4 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(img/image_1.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -557,7 +557,7 @@
               </div>
             </div>
             <div class="block-21 mb-5 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(img/image_2.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -587,8 +587,8 @@
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Download App</h2>
             <div class="img-midia pl-4">
-              <img src="images/google-play-store.png" alt="">
-              <img src="images/apple-app-store.png" alt="">
+              <img src="img/google-play-store.png" alt="">
+              <img src="img/apple-app-store.png" alt="">
             </div>
           </div>
         </div>
