--- a/childhospital-anywhere.html
+++ b/childhospital-anywhere.html
@@ -35,12 +35,12 @@
           <!-- <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li> -->
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#test">Services</a>
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#stores">Deparments</a>
-          </li> -->
+            <a class="nav-link" href="index.html">Deparments</a>
+          </li>
           <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
@@ -141,14 +141,14 @@
         <div class="col-xl-3 col-md-6 col-sm-12">
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2 logo">Dr.<span>care</span></h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam illum omnis explicabo modi consequatur tempora.</p>
           </div>
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><span class="icon"><i class="fas fa-map-marker-alt"></i></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-                <li><a href="#"><span class="icon"><i class="fas fa-phone-alt"></i></span><span class="text">+2 392 3929 210</span></a></li>
+                <li><span class="icon"><i class="fas fa-map-marker-alt"></i></span><span class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span></li>
+                <li><a href="#"><span class="icon"><i class="fas fa-phone-alt"></i></span><span class="text">+1 111 1111 111</span></a></li>
                 <li><a href="#"><span class="icon"><i class="fas fa-envelope"></i></span><span class="text">info@yourdomain.com</span></a></li>
               </ul>
             </div>
@@ -188,7 +188,7 @@
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Recent Blog</h2>
             <div class="block-21 mb-4 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(img/image_1.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -199,7 +199,7 @@
               </div>
             </div>
             <div class="block-21 mb-5 d-flex">
-              <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+              <a class="blog-img mr-4" style="background-image: url(img/image_2.jpg);"></a>
               <div class="text">
                 <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about</a></h3>
                 <div class="meta">
@@ -229,8 +229,8 @@
           <div class="ftco-footer-widget mb-5">
             <h2 class="ftco-heading-2">Download App</h2>
             <div class="img-midia pl-4">
-              <img src="images/google-play-store.png" alt="">
-              <img src="images/apple-app-store.png" alt="">
+              <img src="img/google-play-store.png" alt="">
+              <img src="img/apple-app-store.png" alt="">
             </div>
           </div>
         </div>
